Ui fix for dark mode

--- a/src/app/home/history/history.page.scss
+++ b/src/app/home/history/history.page.scss
@@ -54,3 +54,7 @@
   background: #131313;
   color: var(--ion-color-light);
 }
+
+.chosen-team {
+  color: var(--ion-color-primary);
+}
